--- a/hiring.html
+++ b/hiring.html
@@ -11,190 +11,198 @@
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:100" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+<script> $(function() {
+		$('.pop').on('click', function() {
+			$('.imagepreview').attr('src', $(this).find('img').attr('src'));
+			$('#imagemodal').modal('show');
+		});
+});</script>
+
 </head>
+
+
+<!-- TODO:
+Images start out as full UI images
+after some delay, they fade into wireframes (transition is .5 to .75 seconds)
+at the same time they turn into wireframes, a button appears underneath the image, al-
+lowing the user to toggle back and forth between the two images.
+ -->
 
 <body>
 
     <style type="text/css">
-              body {
+        body {
             background-color: #971EB2;
         }
 
-        .content{
-          text-align: center;
-          padding-left: 5vw;
-          padding-right: 5vw;
+        img.headerimg {
+            width: 50vw;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 50em;
+        }
 
+        img.displayed {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 5vw;
+            width: 100%;
+            padding: 3em
+        }
+
+        .content {
+            text-align: center;
+            padding-left: 2vw;
+            padding-right: 2vw;
         }
 
         a {
-          color: #000000;
-
+            color: #000000;
         }
 
+        h1 {
+            font-size: 5vh;
+            font-family: 'Overpass Mono', monospace;
+            font-weight: 100;
+            margin: 0;
+            color: red;
+            text-align: center;
+            line-height: 1.3;
+        }
+
+        h2 {
+            font-size: 4vh;
+            font-family: 'Overpass Mono', monospace;
+            color: red;
+            text-align: center;
+            padding-top: 4vw;
+        }
+
+        h3 {
+            font-size: 2.5vh;
+            font-family: 'Overpass Mono', monospace;
+            color: red;
+            padding: 4vw;
+            text-align: left;
+            line-height: 1.5;
+        }
 
         @media all and (min-width: 960px) {
-          h1 {
-              font-size: calc(5vw * 0.7);
-              font-family: 'Overpass Mono', monospace;
-              font-weight: 100;
-              margin: 0;
-              color: white;
-              text-align: left;
-              line-height: 1.7;
-              /*padding-top:8em;*/
-          }
-
-          h2 {
-            font-size: calc(3vw * 0.7);
-              font-family: 'Overpass Mono', monospace;
-              color: #000000;
-              text-align: center;
-
-          }
-
-          h3 {
-              font-size: calc(2vw * 0.7);
-              font-family: 'Overpass Mono', monospace;
-              color: #000000;
-              padding: 4vw;
-              text-align: left;
-              line-height: 1.5;
-          }
-
-          img.displayed {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            /*width:10px;*/
-            margin-top:6vw;
-            max-width:30vw;
-
-          }
+            h1 {
+                font-size: calc(5vw * 0.7);
+                font-family: 'Overpass Mono', monospace;
+                font-weight: 100;
+                color: yellow;
+                text-align: left;
+                line-height: 1.7;
+            }
+            h2 {
+                font-size: calc(3vw * 0.7);
+                font-family: 'Overpass Mono', monospace;
+                color: yellow;
+                text-align: center;
+            }
+            h3 {
+                font-size: calc(2vw * 0.7);
+                font-family: 'Overpass Mono', monospace;
+                color: yellow;
+                padding: 4vw;
+                text-align: left;
+                line-height: 1.5;
+            }
         }
 
-
-
-        @media all and (max-width: 959px) and (min-width: 50px) {
-          h1 {
-              font-size: 5vw;
-              font-family: 'Overpass Mono', monospace;
-              font-weight: 100;
-              margin: 0;
-              color: white;
-              text-align: center;
-              line-height: 1.3;
-              /*padding-top:8em;*/
-          }
-
-          h2 {
-            font-size: 2vh;
-              font-family: 'Overpass Mono', monospace;
-              color: black;
-              text-align: center;
-              padding-top: 4vw;
-
-
-          }
-
-          h3 {
-              font-size: 1.3vh;
-              font-family: 'Overpass Mono', monospace;
-              color: black;
-              padding: 4vw;
-              text-align: left;
-              line-height: 1.5;
-          }
-
-          img.displayed {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 8vw;
-
-            /*width:10px;*/
-            max-width:40vw;
-
-          }
+        @media all and (max-width: 959px) and (min-width: 450px) {
+            h1 {
+                font-size: 6vw;
+                font-family: 'Overpass Mono', monospace;
+                font-weight: 100;
+                color: blue;
+                text-align: center;
+                line-height: 1.3;
+            }
+            h2 {
+                font-size: 3vh;
+                font-family: 'Overpass Mono', monospace;
+                color: blue;
+                text-align: center;
+                padding-top: 4vw;
+            }
+            h3 {
+                font-size: 2vh;
+                font-family: 'Overpass Mono', monospace;
+                color: blue;
+                padding: 4vw;
+                text-align: left;
+                line-height: 1.5;
+            }
         }
-
-
-
-
-
 
         .nav {
-          height: 5vh;
-          font-size: 1em;
-          font-family: 'Overpass Mono', monospace;
-          font-weight: 100;
-          text-align: center;
-          padding: 0em;
-          display:flex;
-          justify-content:center;
-          align-items:center;
-          /*width:50%;*/
-
+            height: 5vh;
+            font-size: 1em;
+            font-family: 'Overpass Mono', monospace;
+            font-weight: 100;
+            text-align: center;
+            padding: 0em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
 
 
+        .top {
+            padding-bottom: 5em;
+            padding-top: 10em;
+        }
 
-      img.headerimg{
-        width:50vw;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 40em;
-      }
+        .quickdetails {
+            background-color: #971EB2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
 
 
-      .top{
-        padding-bottom: 5em;
-        padding-top: 10em;
-      }
 
-      .quickdetails {
-
-        background-color: #971EB2;
-        display:flex;
-        flex-direction: column;
-        justify-content:center;
-        align-items:center;
-      }
 
     </style>
 
-      <div class="row-fluid">
-
-        <div class="col-sm-6 nav" style="background-color: #0076FF;">
-            <a href=""><- return home</a>
-          </div>
-        <div class="col-sm-6 nav" style="background-color: #E5D410;">
-          <a href="">venture onwards -></a>
-        </div>
-
-
-            <div class="col-sm-12 top" style="background-color: #1EB255;">
-              <div class="col-sm-6">
-                <a href="#"><img class="headerimg" src="assets/placeholder_phone_black.png" onmouseover="this.src='assets/placeholder_phone.png'" onmouseout="this.src='assets/placeholder_phone_black.png'" /></a>
-            </div>
-            <div class="col-sm-6">
-              <h1 >How do you make a hiring decision as easy as <img src="assets/hirewire_checkmark.png" style="width:7vw">?</h1>
-          </div>
-        </div>
-
-
-
-
     <div class="row-fluid">
 
-        <div class="col-sm-12 quickdetails" >
-            <div class="col-sm-3 quickdetails">
-              <h2>quick details</h2>
+        <div class="col-sm-6 nav" style="background-color: #0076FF;">
+            <a href="">
+                <- return home</a>
+        </div>
+        <div class="col-sm-6 nav" style="background-color: #E5D410;">
+            <a href="">venture onwards -></a>
+        </div>
+
+
+        <div class="col-sm-12 top" style="background-color: #1EB255;">
+            <div class="col-sm-6">
+                <img class="headerimg" src="assets/placeholder_double.png">
             </div>
-            <div class="col-sm-9 quickdetails">
-            <h3 style="color:white;">
+            <div class="col-sm-6">
+                <h1>How do you make a hiring decision as easy as <img src="assets/hirewire_checkmark.png" style="width:7vw">?</h1>
+            </div>
+        </div>
+
+
+
+
+        <div class="row-fluid">
+
+            <div class="col-sm-12 quickdetails">
+                <div class="col-sm-3 quickdetails">
+                    <h2 style="padding-top:.5em">Summary</h2>
+                </div>
+                <div class="col-sm-9 quickdetails">
+                    <h3 style="color:white;">
               <span style="color:black; font-weight:bolder;">subject</span> an app for employers actively hiring employees<br />
               <br style="line-height:0px;" />
               <span style="color:black; font-weight:bolder;">goal</span> help managers select the right candidates quickly<br />
@@ -202,19 +210,22 @@
               <span style="color:black; font-weight:bolder">solution</span> relevant information, helpful visual queues<br />
               <br style="line-height:0px;" />
               <span style="color:black; font-weight:bolder">scope</span> hypothetical improvements on an existing app<br />
-              <br style="line-height:0px;" />
+
             </h3>
-          </div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="row-fluid" >
+        <div class="row-fluid">
 
-        <div class="col-sm-12 content" style="background-color: #FF6000; padding-top:1em; padding-bottom:4em">
-            <h2>Inform product design with user feedback and research</h2>
-            <div class="row-fluid" >
-              <div class="col-sm-6 ">
-                <h3>
+            <div class="col-sm-12 content" style="background-color: #FF6000; padding-top:1em; padding-bottom:4em">
+                <h2>Inform product design with user feedback and research</h2>
+                <div class="row-fluid">
+                    <div class="col-sm-6">
+
+
+
+                        <h3>
                 We know from user research that managers care about dependability, so let's make that part of the experience:
                 <br /><br /> Dependability breaks down into two parts:<br /><br />
                   1. <b>distance</b> - the closer the jobseeker, the more likely they are to show up for shifts.
@@ -222,27 +233,55 @@
                   2. <b>previous responsibilties</b>. it matters more what the jobseeker has done, not where they've done it.
                   <br /><br />
                 </h3>
-              </div>
-              <div class="col-sm-6 ">
-                <a href="#"><img class="displayed" src="assets/placeholder_phone_black.png" onmouseover="this.src='assets/placeholder_phone.png'" onmouseout="this.src='assets/placeholder_phone_black.png'" /></a>
-              </div>
+                    </div>
+
+                    <div class="col-sm-6">
+
+                      <a name="abc"></a>
+                      <a href="#abc" class="pop displayed">
+                          <img class ="displayed" src="assets/placeholder_phone_black.png">
+                      </a>
+
+
+                      <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-body">
+                            	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                              <img src="" class="imagepreview" style="width: 100%;">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+
+
+
+
+
+
+
+
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
 
 
-        <div class="row-fluid" >
+        <div class="row-fluid">
             <div class="col-sm-12 content" style="background-color: #1EB255; padding-top:1em; padding-bottom:4em;">
                 <h2>Meet managers where they’re at; take them where they want to go</h2>
-                <div class="row-fluid" >
-                  <div class="col-sm-6 ">
-                      <a href="#"><img class="displayed" src="assets/placeholder_phone_black.png" onmouseover="this.src='assets/placeholder_phone.png'" onmouseout="this.src='assets/placeholder_phone_black.png'" /></a>
+                <div class="row-fluid">
+                    <div class="col-sm-6 ">
+                        <a name="abc2"></a>
+                        <a href="#abc2" class="pop displayed">
+                          <img class="displayed" src="assets/placeholder_double.png">
+                        </a>
 
 
-
-                  </div>
-                  <div class="col-sm-6 ">
-                    <h3>
+                    </div>
+                    <div class="col-sm-6 ">
+                        <h3>
                       Give managers the information they expect and let them to amazing things with it.<br /> <br />
                     1. remind them of exactly what they were searching. (image: zoom in of top half of search screen) <br /><br />
                      2.Encourage  desired behavior (saying YES to candidates) using visual queues 1. image: zoom in bottom
@@ -250,21 +289,22 @@
                     3. Let them dig a little deeper to satisfy their curiosity 1. image:
                      zoom in bottom half of detail interest screen
                     </h3>
-                  </div>
+                    </div>
 
                 </div>
-              </div>
             </div>
-
-    <div class="row-fluid">
-
-      <div class="col-sm-6 nav" style="background-color: #0076FF;">
-          <a href=""><- return home</a>
         </div>
-      <div class="col-sm-6 nav" style="background-color: #E5D410;">
-        <a href="">venture onwards -></a>
-      </div>
-    </div>
+
+        <div class="row-fluid">
+
+            <div class="col-sm-6 nav" style="background-color: #0076FF;">
+                <a href="">
+                    <- return home</a>
+            </div>
+            <div class="col-sm-6 nav" style="background-color: #E5D410;">
+                <a href="">venture onwards -></a>
+            </div>
+        </div>
 
 </body>
 
