--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Hover/css/hover.css">
+    <link rel="stylesheet" href="assets/css/font-awesome-4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,144 +16,19 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet">
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-92773613-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
-
-    <style type="text/css">
-        .fascist {
-            font-size: 50%;
-            letter-spacing: 8px;
-            font-family: 'UnifrakturCook', monospace !important;
-            font-weight: bold;
-            /*word-wrap: break-word;*/
-        }
-
-        a {
-            color: white;
-        }
-
-        .name {
-            font-size: 75px;
-            font-family: 'Overpass Mono', monospace;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 1px DarkSlateGrey;
-        }
-
-        /*.container {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-items: center;
-        }*/
-        .item {
-
-          padding: 2em;
-        }
-        .container-fluid {
-            padding: 50px;
-        }
-
-        .about {
-            font-size: 24px;
-            font-family: 'Overpass Mono', monospace;
-            /*margin-top: -100px;*/
-            color: #ffffff;
-            background-color: #0076FF;
-            box-shadow: 10 10;
-            -webkit-box-shadow: 10px 10px #DADADA;
-        }
-
-        .x:hover {
-            /*text-transform: uppercase;*/
-            /*letter-spacing: -1px;*/
-        }
-
-        #about-1 {
-            text-align: right;
-            margin-right: -16px;
-        }
-
-        #about-2 {
-            text-align: right;
-            margin-right: -16px;
-            background-color: #1A4C49;
-        }
-
-        .content-1 {
-            background-color: #E5D410;
-            -webkit-box-shadow: -10px -10px #4C40FF;
-        }
-
-        .content-2 {
-            background-color: #FF6000;
-            -webkit-box-shadow: -10px 10px #971EB2;
-        }
-
-        .content-3 {
-            background-color: #DADADA;
-            -webkit-box-shadow: 10px 10px #FF6000;
-        }
-
-        .content-4 {
-            background-color: #4C40FF;
-            -webkit-box-shadow: 10px -10px #1EB255;
-        }
-
-        .content-5 {
-            background-color: #black;
-            -webkit-box-shadow: 10px 10px #4C40FF;
-        }
-
-        .content-5 {
-            background-color: #1EB255;
-            -webkit-box-shadow: -10px -10px #971EB2;
-        }
-
-        .content-6 {
-            background-color: #4C40FF;
-            -webkit-box-shadow: -10px 10px #971EB2;
-        }
-
-        .overlay {
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          height: 100%;
-          width: 100%;
-          opacity: 0;
-          transition: .5s ease;
-          background-color: white;
-        }
-
-        .item:hover .overlay {
-          opacity: .85;
-        }
-
-        .text_overlay {
-          color: white;
-          font-size: 20px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          font-size: 24px;
-          font-family: 'Overpass Mono', monospace;
-          -webkit-box-shadow: 10px 10px #DADADA;
-          padding-top:1em;
-          padding-bottom:1em;
-          padding-left:.5em;
-          padding-right:.5em;
-
-        }
-
-
-    </style>
-
 
 
     <div class="container-fluid">
@@ -167,11 +44,11 @@
             <span class="x">  <p>data analyst</p></span>
             <span class="x">  <p>user researcher</p></span>
             <span class="x">  <p>project manager</p></span>
-            <span class="x">  <p> <a href="assets/bruno.png">dog dad extraordinaire</a></p></span>
+            <span class="x">  <p> <a style="color:white" href="assets/bruno.png">dog dad extraordinaire</a></p></span>
         </div>
     </div>
     <div class="container-fluid">
-    <a href="http://fascist.report/">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+    <a href="http://fascist.report/"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/fascistreport.png">
         <div class="overlay">
           <div class="text_overlay fascist" style="background-color: red;">the fascist.report</div>
@@ -183,13 +60,13 @@
           <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
         </div>
       </div> </a>
-    <a href="https://medium.com/@smw./nits-forwarding-images-in-facebook-messenger-4fac6a33b02b">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+    <a href="https://medium.com/@smw./nits-forwarding-images-in-facebook-messenger-4fac6a33b02b"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/facebook_forward.png">
         <div class="overlay">
-          <div class="text_overlay" style="background-color: #FF6000;">small nits (fix URL)</div>
+          <div class="text_overlay" style="background-color: #FF6000;">UX/UI-related Medium posts</div>
         </div>
       </div> </a>
-      <a href="http://fascist.report/"><div class="col-lg-6 col-md-6 col-sm-12 item">
+      <a href="resume.html"  target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/resume.png">
         <div class="overlay">
           <div class="text_overlay" style="background-color: #971EB2;">resume</div>
@@ -218,11 +95,26 @@ CV
     </div>
     </div>
     <div class="container-fluid">
-        <div class="col-sm-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
-            made from scratch in ATL -- PUT IN LINKEDIN, GITHUB ICONS
+        <div class="col-lg-10 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
+            Made from scratch in Atlanta <3
+          </div>
+
+          <div class="col-sm-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-top:1em">
+
+            <a class="btn btn-social-icon btn-github" href="https://github.com/spencermwatts/">
+    <span class="fa fa-github fa-2x"></span>
+  </a>
+  <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/spencerwatts/">
+  <span class="fa fa-linkedin fa-2x"></span>
+  </a>
+  <a class="btn btn-facebook" href="https://www.facebook.com/spencerwatts">
+  <span class="fa fa-facebook fa-2x"></span>
+  </a>
+</div>
 
 
-        </div>
+
+
     </div>
 
 </body>
