--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="text_overlay" style="background-color: #FF6000;">UX/UI-related Medium posts</div>
         </div>
       </div> </a>
-      <a href="resume.html"  target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
+      <a href="resume.html"><div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/resume.png">
         <div class="overlay">
           <div class="text_overlay" style="background-color: #971EB2;">resume</div>
@@ -95,11 +95,12 @@ CV
     </div>
     </div>
     <div class="container-fluid">
-        <div class="col-lg-10 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
+        <div class="col-lg-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
             Made from scratch in Atlanta <3
           </div>
+        </div>
 
-          <div class="col-sm-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-top:1em">
+          <div class="col-sm-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-bottom:2em">
 
             <a class="btn btn-social-icon btn-github" href="https://github.com/spencermwatts/">
     <span class="fa fa-github fa-2x"></span>
