small alignment fixes

--- a/resume.html
+++ b/resume.html
@@ -97,29 +97,36 @@ growth marketing, user research</h3><br />
 <h1 style="text-align:left">skills</h1>
 
 <h2 style="color:#4C40FF">design tools</h2>
-<h3>Adobe Illustrator ***<br />
-Sketch *****<br /></h3>
+<h3>
+Sketch *****<br />
+Adobe Illustrator ***<br /></h3>
 <br />
 <h2 style="color:#4C40FF">prototyping</h2>
-<h3>Framer.js **<br />
+<h3>
+InVision ****<br />
 Origami ***<br />
 Adobe XD ***<br />
-InVision ****<br /></h3>
+Framer.js **<br />
+</h3>
 <br />
 <h2 style="color:#4C40FF">analysis</h2>
-<h3>User surveys ***<br />
-User interviews ***<br />
+<h3>
+
 AB testing *****<br />
 Statistical analysis ****<br />
-Financial modeling ***</h3><br />
+Financial modeling ***<br />
+User surveys ***<br />
+User interviews ***<br />
+</h3>
 
 <h2 style="color:#4C40FF">languages</h2>
-<h3>HTML / CSS ****<br />
+<h3>
 SQL *****<br />
-Ruby *<br />
+HTML / CSS ****<br />
 Python **<br />
+Ruby *<br />
+
 Java (Android) *<br /></h3>
-<br />
 
       </div>
 
