--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
         </div>
       </div> </a>
-    <a href="https://medium.com/@smw./nits-forwarding-images-in-facebook-messenger-4fac6a33b02b"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+    <a href="https://medium.com/@smw./latest"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/facebook_forward.png">
         <div class="overlay">
           <div class="text_overlay" style="background-color: #FF6000;">UX/UI-related Medium posts</div>
