small alignment fixes

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
         <div class="col-sm-4 about" style="padding-bottom:10px; padding-top:10px">
             <span class="x">  <p>product designer</p> </span>
-            <span class="x">  <p>data analyst</p></span>
+            <span class="x">  <p>prototyper</p></span>
             <span class="x">  <p>user researcher</p></span>
-            <span class="x">  <p>project manager</p></span>
+            <span class="x">  <p>data analyst</p></span>
             <span class="x">  <p> <a style="color:white" href="assets/bruno.png">dog dad extraordinaire</a></p></span>
         </div>
     </div>
@@ -60,10 +60,22 @@
           <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
         </div>
       </div> </a>
+      <a href="assets/demo4.mov"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+          <img style="width:70%; display:block; margin-right:auto; margin-left:auto" src="assets/demo4.gif">
+          <div class="overlay">
+            <div class="text_overlay" style="background-color: purple;">game concept (made with origami)</div>
+          </div>
+        </div></a>
+        <a href="https://invis.io/G4AODOVJC" target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
+          <img style="width:100%" src="assets/parkmobile.png">
+          <div class="overlay">
+            <div class="text_overlay" style="background-color: deeppink;">UI prototype</div>
+          </div>
+        </div> </a>
     <a href="https://medium.com/@smw./latest"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/facebook_forward.png">
         <div class="overlay">
-          <div class="text_overlay" style="background-color: #FF6000;">UX/UI-related Medium posts</div>
+          <div class="text_overlay" style="background-color: #FF6000;">UX/UI nits</div>
         </div>
       </div> </a>
       <a href="resume.html"><div class="col-lg-6 col-md-6 col-sm-12 item">
@@ -72,10 +84,6 @@
           <div class="text_overlay" style="background-color: #971EB2;">resume</div>
         </div>
       </div></a>
-
-
-
-
     </div>
 
 <!--
