--- a/hiring.html
+++ b/hiring.html
@@ -103,12 +103,14 @@
 
         @media all and (min-width: 960px) {
             h1 {
-                font-size: calc(7vw * 0.7);
+                font-size: calc(4vw * 0.7);
                 font-family: 'Overpass Mono', monospace;
                 font-weight: 100;
                 color: white;
                 text-align: center;
                 line-height: 1.5;
+                padding:6em
+
             }
             h2 {
                 font-size: calc(3.5vw * 0.7);
@@ -135,12 +137,14 @@
 
         @media all and (max-width: 959px) and (min-width: 450px) {
             h1 {
-                font-size: 6vw;
+                font-size: 4vw;
                 font-family: 'Overpass Mono', monospace;
                 font-weight: 100;
                 color: white;
                 text-align: center;
                 line-height: 1.3;
+                padding:3em
+
             }
             h2 {
                 font-size: 3vh;
@@ -213,7 +217,7 @@
                 <img class="headerimg" src="assets/placeholder_double.png">
             </div> -->
             <div class="col-sm-12">
-                <span class="top"> <h1>How do you make a hiring decision as easy as <img src="assets/hirewire_checkmark.png" style="width:7vw">?</h1></span>
+                <span class="top"> <h1>How do you make a hiring decision as easy as <img src="assets/hirewire_checkmark.png" style="width:5vw">?</h1></span>
             </div>
         </div>
 
