added missing images

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
           <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
         </div>
       </div> </a>
-      <a href="assets/demo4.mov"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+     <div class="col-lg-6 col-md-6 col-sm-12 item">
           <img style="width:70%; display:block; margin-right:auto; margin-left:auto" src="assets/demo4.gif">
           <div class="overlay">
             <div class="text_overlay" style="background-color: purple;">game concept (made with origami)</div>
           </div>
-        </div></a>
+        </div>
         <a href="https://invis.io/G4AODOVJC" target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
           <img style="width:100%" src="assets/parkmobile.png">
           <div class="overlay">
