edits to hiring

--- a/hiring.html
+++ b/hiring.html
@@ -207,9 +207,9 @@
 
                 <- return home
         </div></a>
-        <a href="http://www.spencermwatts.com/"><div class="col-sm-6 nav" style="background-color: #E5D410;">
-            venture onwards ->
-        </div></a>
+        <div class="col-sm-6 nav" style="background-color: #0076FF;">
+
+        </div>
 
 
         <div class="col-sm-12 " style="background-color: #1EB255; padding-top:3em; padding-bottom:3em">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-sm-12 quickdetails">
                     <h3 style="color:white;">
-              <span style="color:black; font-weight:bolder;">subject</span> an app for employers actively hiring employees<br />
+              <span style="color:black; font-weight:bolder;">subject</span> an app for restaurant managers seeking employees<br />
               <br style="line-height:0px;" />
               <span style="color:black; font-weight:bolder;">goal</span> help managers select the right candidates quickly<br />
               <br style="line-height:0px;" />
@@ -257,9 +257,9 @@
                         <h3>
                 We know from user research that managers care about dependability, so let's make that part of the experience.
                 <br /><br /> Dependability breaks down into two parts:<br /><br />
-                  1. <b>distance</b> - the closer the jobseeker, the more likely they are to show up for shifts.
+                  1. <b>distance</b> - the closer the employee, the more likely they are to show up for shifts.
                 <br /><br />
-                  2. <b>previous roles</b>. it matters more what the jobseeker has done, not where they've done it.
+                  2. <b>previous roles</b>. it matters more what the employee has done, not where they've done it.
                   <br /><br />
                 </h3>
                     </div>
@@ -311,8 +311,8 @@
                     </div>
                     <div class="col-sm-6 ">
                         <h3>
-                      Give managers the information they expect and let them to amazing things with it.<br /> <br />
-                     1. Encourage desired behavior (like avoiding the X-button) with visual queues. <br /><br />
+                      Give managers the information they expect and let them do amazing things with it.<br /> <br />
+                     1. Encourage positive behavior (like expressing interest in a potential employee) with visual queues. <br /><br />
                     2. Don't leave them hanging; remind them of exactly what they were searching <br /><br />
 
                     3. Let them dig a little deeper to better understand the candidate and his/her skills
@@ -329,9 +329,10 @@
 
                   <- return home
           </div></a>
-          <a href="http://www.spencermwatts.com/"><div class="col-sm-6 nav" style="background-color: #E5D410;">
-              venture onwards ->
-          </div></a>
+          <div class="col-sm-6 nav" style="background-color: #0076FF;">
+
+          </div>
+
         </div>
 
 </body>
