--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@ CV
     </div>
     </div>
     <div class="container-fluid">
-        <div class="col-lg-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
+        <div class="col-lg-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
             Made from scratch in Atlanta <3
           </div>
         </div>
 
-          <div class="col-sm-12 about" style="background-color:white; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-bottom:2em">
+          <div class="col-sm-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-bottom:2em">
 
             <a class="btn btn-social-icon btn-github" href="https://github.com/spencermwatts/">
     <span class="fa fa-github fa-2x"></span>
